--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -69,7 +69,7 @@ aside{
 }
 .contents-c{@extend %flex-center, %flex-column; flex-shrink: 0; align-items: flex-start; justify-content: flex-start; width:402px; height:100%; background: #fff; min-height: 1px; z-index: 8;}
 .contents-r{
-    flex:1; @extend %flex-center, %flex-column; align-items: normal; justify-content: flex-start; padding:20px;
+    flex:1; @extend %flex-center, %flex-column; align-items: normal; justify-content: flex-start; padding:20px; min-width: 1px;
 }
 
 
@@ -101,17 +101,7 @@ Component style
     &.col12 { width: 100%; }
     &.col-auto{flex:auto;}
 
-    /* &-header{
-        &{display:flex; align-items: center; justify-content: space-between; height:30px; margin-top:-8px; padding:0 var(--card-padding);}
-        b{font-weight: normal;}
-        b:first-child{display:flex; align-items: center; gap:8px;}
-        h3{font-size:16px; font-weight: 400;}
-        h3 + em{font-size:13px; color:#999; font-weight: 300;}
-        span{font-size:12px; }
-    } */
     &-title{display:flex; margin-bottom:16px; font-size:16px; color:#1D1D1D; font-weight: 600;}
-    // &-body{flex-grow: 1; padding:0 var(--card-padding); gap:8px;}
-    // &-footer{padding:0 var(--card-padding);}
 }
 
 
@@ -219,6 +209,7 @@ select{
     &warning{background:var(--color-warning);}
     &info{background:var(--color-info);}
     &basic{border:1px solid #1D1D1D; background: #fff; color:#1D1D1D;}
+    &soft{background:#EDEDED; color:#1D1D1D;}
     &dark{background:var(--color-dark);}
 
     &secondary:hover{background:var(--color-secondary-a); opacity: 1 !important;}
@@ -245,7 +236,6 @@ select{
     }
 
     &ghost:hover, &basic:hover, &line-dark:hover, &line-danger:hover{opacity:1 !important; background: #EFF0F2;}
-    // &ico:hover{color:var(--color-primary); background: var(--color-hover-bg);}
     &link:hover{text-decoration: underline;}
 
     &round.btn-md{width:40px;}
@@ -254,40 +244,7 @@ select{
 [class*='btn-']:hover{opacity: .7;}
 .text-disabled{color: var(--color-disabled) !important; pointer-events: none !important;}
 
-/*
-.btn-toggle-slider {
-    &{ position: relative; @extend %inline-flex-center; width: auto; vertical-align: middle; }
-    .item-slider {
-        &{ position: relative; display:inline-block; width:28px; height:16px; background-color: #BCBFC1; transition: .4s; border-radius: 16px; vertical-align: inherit;}
-        &:before { position: absolute; content: ""; height: 12px; width: 12px; left: 2px; bottom: 2px; background-color: #fff; transition: .4s; border-radius: 50%;}
-    }
-    input{
-        &{opacity: 0; width: 0; height: 0; margin:0; padding:0; }
-        &:checked + .item-slider { background-color: var(--color-primary); }
-        &:focus + .item-slider { box-shadow: 0 0 1px var(--color-primary); }
-        &:checked + .item-slider:before {transform: translateX(12px); }
-    }
-    .item-text{display:inline-flex; margin-left:6px; font-size:12px; color:#444;}
-}
 
-
-.btn-toggle-radio{
-    &{@extend %inline-flex-center; gap:4px; font-size:13px;}
-    [type=radio]{
-        &{display: none;}
-        & + span{@extend %inline-flex-center; gap:6px; height:30px; padding:0 12px; color:#777; vertical-align: middle; border-radius: 5px; cursor:pointer;}
-        &:checked + span,
-        &:hover + span{background: rgba(54,85,242,.1); color:var(--color-primary); font-weight:600;}
-        & + span i{font-size:16px;}
-        &:disabled + span{color:#bbb; cursor: default; background: none; font-weight: normal;}
-    }
-}
-.disabled-item{
-    position:relative; pointer-events: auto !important;
-
-    .disabled-msg{position:absolute; top:100%; left:0; display:none; min-width:150px; line-height: 1.5; padding:8px; border-radius: 0 8px  8px  8px; background: #fff; border: 1px solid #E9EBEC; box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.07); color:#444; font-size: 12px; cursor: default; white-space: nowrap;}
-    &:hover .disabled-msg{display:inline-flex !important;}
-} */
 
 .badge-{
     &xs, &sm, &md{@extend %inline-flex-center; gap:8px; line-height: 1; border-radius:6px; text-align: center; vertical-align: middle; font-weight: 600; white-space: nowrap;}
@@ -371,30 +328,33 @@ select{
 }
 
 
-/* .accordion-wrap{
+.accordion-wrap{
     .accordion-body{
         display:none;
-
-        > .accordion-wrap{padding-left:20px;}
     }
 
-    .accordion-tit{cursor: pointer; }
-    .accordion-tit:before{clear:both; display:inline-block; margin-right:5px; content: "\ea3e"; font-family: "xeicon"; font-size:1em; transform: rotate(0deg);}
+    .accordion-btn{cursor: pointer; display:inline-block; width:20px; height:20px; background: url(../images/ico-accordion.svg) 50% 50% no-repeat; transform: rotate(180deg);}
 
     &.type-show{
-        > .accordion-tit:before{transform: rotate(90deg); }
-        > .accordion-body{display:block;}
+        .accordion-btn{transform: rotate(0deg); }
+        .accordion-body{display:block;}
     }
-} */
+}
 
 
+.table-wrapper{
+    @extend %flex-column; gap:18px;
 
+    &+&{margin-top:50px;}
+}
 .table-wrap{
     &{width:100%; font-family: inherit; }
 
     table{
         &{width:100%;}
-        th, td{height:35px; line-height: 1.2; padding: 8px 8px; text-align: left; vertical-align: middle; font-weight: normal; font-size:13px; color:#444; white-space: normal;}
+        th, td{height:32px; line-height: 1.2; padding: 12px 10px; text-align: left; vertical-align: middle; font-weight: normal; font-size:13px; color:#1d1d1d; white-space: normal;}
+        th{font-weight: 600;}
+        td{font-weight: 500;}
 
         &.center *{text-align:center;}
         &.right *{text-align:right;}
@@ -402,18 +362,27 @@ select{
         th.center, td.center{text-align:center !important;}
         th.right, td.right{text-align:right !important;}
         th.left, td.left{text-align:left !important;}
+
+        tr.th-sm th, .th-sm{padding:8px 10px;}
     }
 
     &.type-data{
-        &{@extend %table-outline;}
-        th, td{border-bottom:1px solid #eee;}
-        thead tr{background:#f4f5f7;}
-        thead th{border-bottom-color: #ddd; font-weight: bold; white-space: nowrap; }
+        border-top:1px solid #1D1D1D;
+        th, td{border-bottom:1px solid #DEDEDE; border-right:1px solid #DEDEDE;}
+        th:last-child,
+        td:last-child,
+        .border-r0{border-right:none;}
+
+        thead tr, thead{background:#EDEEF0;}
+        thead th{border-bottom-color: #ddd; white-space: nowrap; }
     }
 
     &.type-input{
-        th, td{text-align: left;}
-        th{width:fit-content; white-space: nowrap; font-weight: bold;}
+        th, td{text-align: left; padding:6px 0 6px 10px; }
+        th{width:fit-content; white-space: nowrap; font-size:14px;}
+        td{padding-left:0;}
+
+        .form-mix{gap:6px;}
     }
 
     .sm th, .sm td{height:40px; padding:4px 10px; text-align: left;}
@@ -421,7 +390,7 @@ select{
 
 
     &.table-scroll{
-        &{position:relative; background: #fff; overflow-x: auto; overflow-y: auto; @extend %table-outline;}
+        &{position:relative; background: #fff; overflow-x: auto; overflow-y: auto;}
         table thead{position: sticky; top: 0px; z-index: 1;}
         td{white-space: nowrap;}
         &::-webkit-scrollbar { width: 8px; height: 8px; opacity: 0;}
@@ -459,17 +428,6 @@ select{
         .btn-ico{ color:var(--color-disabled);}
     }
 }
-
-
-/* .dataNone{
-    &{@extend %flex-center;}
-    p{display:flex; flex-direction: column; gap:10px; text-align: center; color:#666; font-size:13px;}
-    p:before, p:after{clear:both;}
-    p:before{content:"\e9ab"; font-family: "xeicon"; font-size:30px; color:#bbb;}
-    p:after{margin-top:0; content:"No data"; font-weight: 400;}
-    &.type-text p:after{display:none;}
-} */
-
 
 .text-right{text-align: right !important;}
 .input-mix{
@@ -944,7 +902,7 @@ Style Start
 }
 
 .contents-c-body{
-    flex:1; @extend %flex-center, %flex-column; align-items: normal; justify-content: flex-start; width:100%; min-height:1px; padding:20px 14px; border-top:1px solid #dedede;
+    flex:1; @extend %flex-center, %flex-column; align-items: normal; justify-content: flex-start; width:100%; min-height:1px; padding:20px 14px; border-top:1px solid #dedede; overflow-y: auto;
 
     .text-title{margin-bottom:12px;}
 }
@@ -1072,7 +1030,16 @@ Style Start
         &.type-disabled{pointer-events: none; opacity: 0.4;}
     }
 }
+.board-view{
+    flex:1; @extend %flex-center, %flex-column; align-items: normal; padding:0 10px; min-height:1px;
+    dt{
+        @extend %flex-center, %flex-column; align-items: normal; gap:16px; border-bottom:1px solid #DEDEDE; padding:20px 0;
 
+        b{font-size:30px; color:#1D1D1D;}
+        i{font-size:15px; color:#767676;}
+    }
+    dd{flex:1; font-size:14px; white-space: pre-line; padding:48px 0; margin-bottom:20px;  border-bottom:1px solid #DEDEDE; overflow-y: auto;}
+}
 
 
 
@@ -1154,15 +1121,3 @@ h5.guide-tit{color: var(--color-black); font-size:16px;}
     li i{width:150px;}
 }
 
-
-
-// flex layout gap균일하게 주기
-/* ul {display: flex; flex-wrap: wrap; gap: 20px;}
-li {flex: 0 0 calc((100% / 3) - (20px * (3 - 1) / 3));} //한줄에 3개씩 배열해라 */
-
-// transition: ease all 0.3s;
-// [class*='article1_']
-
-
-// 퍼블 작업용 임시 hidden
-// .contents-c, aside{display:none;}
